--- a/netbox/templates/bgp/neighbor_list.html
+++ b/netbox/templates/bgp/neighbor_list.html
@@ -5,7 +5,7 @@
 <div class="pull-right">
     {% export_button content_type %}
 </div>
-<h1>{% block title %}Circuits{% endblock %}</h1>
+<h1>{% block title %}BGP Neighbors{% endblock %}</h1>
 <div class="row">
     <div class="col-md-9">
         {% include 'utilities/obj_table.html' %}
