--- a/netbox/templates/inc/nav_menu.html
+++ b/netbox/templates/inc/nav_menu.html
@@ -375,6 +375,31 @@
                         </li>
                     </ul>
                 </li>
+                <li class="dropdown{% if request.path|contains:'/bgp/' %} active{% endif %}">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">BGP <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li class="dropdown-header">Neighbors</li>
+                        <li>
+                            {% if perms.circuits.add_circuit %}
+                            <div class="buttons pull-right">
+                                <a href="" class="btn btn-xs btn-success" title="Add"><i class="fa fa-plus"></i></a>
+                                <a href="" class="btn btn-xs btn-info" title="Import"><i class="fa fa-download"></i></a>
+                            </div>
+                            {% endif %}
+                            <a href="{% url 'bgp:neighbor_list' %}">Neighbors</a>
+                        </li>
+                        <li>
+                            {% if perms.circuits.add_circuittype %}
+                            <div class="buttons pull-right">
+                                <a href="" class="btn btn-xs btn-success" title="Add"><i class="fa fa-plus"></i></a>
+                                <a href="" class="btn btn-xs btn-info" title="Import"><i class="fa fa-download"></i></a>
+                            </div>
+                            {% endif %}
+                            <a href="">BGP Policy</a>
+                        </li>
+                        <li class="divider"></li>
+                    </ul>
+                </li>
                 {% if request.user.is_authenticated %}
                     <li class="dropdown{% if request.path|contains:'/secrets/' %} active{% endif %}">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Secrets <span class="caret"></span></a>
